# embedded-trainings-2020

./: .gitignore  README.md
advanced/firmware/: Cargo.toml
advanced/firmware/.cargo/: config  config.toml
advanced/firmware/src/: lib.rs
advanced/host/print-descs/: Cargo.toml
advanced/host/print-descs/src/: main.rs
beginner/apps/: Cargo.toml  Embed.toml
beginner/apps/.cargo/: config  config.toml
boards/dk/: Cargo.toml  README.md
boards/dk/src/: lib.rs  peripheral.rs  usbd.rs
boards/dongle/: Cargo.toml  README.md  loopback  loopback-nousb.rs  loopback-nousb11  loopback-nousb16  loopback-nousb16.hex  loopback-nousb21  loopback-nousb26  loopback.hex  loopback.rs  memory.x  puzzle  puzzle-nousb.rs  puzzle-nousb11  puzzle-nousb11.hex  puzzle-nousb16  puzzle-nousb16.hex  puzzle-nousb21  puzzle-nousb21.hex  puzzle-nousb26  puzzle-nousb26.hex  puzzle.hex  puzzle.rs  puzzlegen.rs
boards/dongle/.cargo/: config  config.toml
boards/dongle/deprecated_hex/: README.md  loopback-nousb11.hex  loopback-nousb21.hex  loopback-nousb26.hex  loopback.hex  puzzle-nousb11.hex  puzzle-nousb21.hex
down-the-stack/dk_pac/: Cargo.toml  build.rs  device.x  nrf52.svd
down-the-stack/dk_pac/src/: aar.rs  approtect.rs  bprot.rs  ccm.rs  clock.rs  comp.rs  ecb.rs  egu0.rs  ficr.rs  gpiote.rs  i2s.rs  lib.rs  lpcomp.rs  mwu.rs  nfct.rs  nvmc.rs  p0.rs  pdm.rs  power.rs  ppi.rs  pwm0.rs  qdec.rs  radio.rs  rng.rs  rtc0.rs  saadc.rs  spi0.rs  spim0.rs  spis0.rs  swi0.rs  temp.rs  timer0.rs  twi0.rs  twim0.rs  twis0.rs  uart0.rs  uarte0.rs  uicr.rs  wdt.rs
down-the-stack/dk_pac/src/aar/: addrptr.rs  enable.rs  events_end.rs  events_notresolved.rs  events_resolved.rs  intenclr.rs  intenset.rs  irkptr.rs  nirk.rs  scratchptr.rs  status.rs  tasks_start.rs  tasks_stop.rs
down-the-stack/dk_pac/src/approtect/: disable.rs  forceprotect.rs
down-the-stack/dk_pac/src/bprot/: config0.rs  config1.rs  config2.rs  config3.rs  disableindebug.rs
down-the-stack/dk_pac/src/ccm/: cnfptr.rs  enable.rs  events_endcrypt.rs  events_endksgen.rs  events_error.rs  inptr.rs  intenclr.rs  intenset.rs  micstatus.rs  mode.rs  outptr.rs  scratchptr.rs  shorts.rs  tasks_crypt.rs  tasks_ksgen.rs  tasks_stop.rs
down-the-stack/dk_pac/src/clock/: ctiv.rs  events_ctto.rs  events_done.rs  events_hfclkstarted.rs  events_lfclkstarted.rs  hfclkrun.rs  hfclkstat.rs  intenclr.rs  intenset.rs  lfclkrun.rs  lfclksrc.rs  lfclksrccopy.rs  lfclkstat.rs  tasks_cal.rs  tasks_ctstart.rs  tasks_ctstop.rs  tasks_hfclkstart.rs  tasks_hfclkstop.rs  tasks_lfclkstart.rs  tasks_lfclkstop.rs  traceconfig.rs
down-the-stack/dk_pac/src/comp/: enable.rs  events_down.rs  events_ready.rs  extrefsel.rs  hyst.rs  inten.rs  intenset.rs  isource.rs  mode.rs  psel.rs  refsel.rs  result.rs  tasks_start.rs  th.rs
down-the-stack/dk_pac/src/ecb/: ecbdataptr.rs  events_endecb.rs  events_errorecb.rs  intenclr.rs  intenset.rs  tasks_startecb.rs  tasks_stopecb.rs
down-the-stack/dk_pac/src/egu0/: events_triggered.rs  inten.rs  intenclr.rs  intenset.rs  tasks_trigger.rs
down-the-stack/dk_pac/src/ficr/: codepagesize.rs  codesize.rs  deviceaddr.rs  deviceaddrtype.rs  deviceid.rs  er.rs  info.rs  ir.rs  nfc.rs  temp.rs
down-the-stack/dk_pac/src/gpiote/: config.rs  events_in.rs  events_port.rs  intenclr.rs  intenset.rs  tasks_clr.rs  tasks_out.rs  tasks_set.rs
down-the-stack/dk_pac/src/i2s/: config.rs  enable.rs  events_rxptrupd.rs  events_stopped.rs  events_txptrupd.rs  inten.rs  intenclr.rs  intenset.rs  psel.rs  rxd.rs  rxtxd.rs  tasks_start.rs  tasks_stop.rs  txd.rs
down-the-stack/dk_pac/src/lpcomp/: anadetect.rs  enable.rs  events_cross.rs  events_ready.rs  events_up.rs  extrefsel.rs  hyst.rs  intenclr.rs  psel.rs  refsel.rs  result.rs  shorts.rs  tasks_sample.rs  tasks_stop.rs
down-the-stack/dk_pac/src/mwu/: events_pregion.rs  events_region.rs  inten.rs  intenclr.rs  intenset.rs  nmien.rs  nmienclr.rs  nmienset.rs  perregion.rs  pregion.rs  region.rs  regionen.rs  regionenclr.rs  regionenset.rs
down-the-stack/dk_pac/src/nfct/: currentloadctrl.rs  errorstatus.rs  events_autocolresstarted.rs  events_collision.rs  events_endrx.rs  events_endtx.rs  events_error.rs  events_fielddetected.rs  events_fieldlost.rs  events_ready.rs  events_rxerror.rs  events_rxframeend.rs  events_rxframestart.rs  events_selected.rs  events_started.rs  events_txframeend.rs  events_txframestart.rs  fieldpresent.rs  framedelaymax.rs  framedelaymin.rs  framedelaymode.rs  framestatus.rs  inten.rs  intenclr.rs  intenset.rs  maxlen.rs  nfcid1_2nd_last.rs  nfcid1_3rd_last.rs  nfcid1_last.rs  packetptr.rs  rxd.rs  selres.rs  sensres.rs  shorts.rs  tasks_activate.rs  tasks_disable.rs  tasks_enablerxdata.rs  tasks_goidle.rs  tasks_gosleep.rs  tasks_sense.rs  (+2 more)
down-the-stack/dk_pac/src/nvmc/: config.rs  eraseall.rs  erasepage.rs  erasepcr0.rs  erasepcr1.rs  eraseuicr.rs  icachecnf.rs  ihit.rs  imiss.rs  ready.rs
down-the-stack/dk_pac/src/p0/: detectmode.rs  dir.rs  dirclr.rs  dirset.rs  in_.rs  latch.rs  out.rs  outclr.rs  outset.rs  pin_cnf.rs
down-the-stack/dk_pac/src/pdm/: enable.rs  events_end.rs  events_started.rs  events_stopped.rs  gainl.rs  gainr.rs  inten.rs  intenclr.rs  intenset.rs  mode.rs  pdmclkctrl.rs  psel.rs  sample.rs  tasks_start.rs  tasks_stop.rs
down-the-stack/dk_pac/src/power/: dcdcen.rs  events_pofwarn.rs  events_sleepenter.rs  events_sleepexit.rs  gpregret.rs  gpregret2.rs  intenclr.rs  intenset.rs  pofcon.rs  ram.rs  ramon.rs  ramonb.rs  ramstatus.rs  resetreas.rs  systemoff.rs  tasks_constlat.rs  tasks_lowpwr.rs
down-the-stack/dk_pac/src/ppi/: ch.rs  chen.rs  chenclr.rs  chenset.rs  chg.rs  fork.rs  tasks_chg.rs
down-the-stack/dk_pac/src/pwm0/: countertop.rs  decoder.rs  enable.rs  events_loopsdone.rs  events_pwmperiodend.rs  events_seqend.rs  events_seqstarted.rs  events_stopped.rs  inten.rs  intenclr.rs  intenset.rs  loop_.rs  (+8 more)
tools/change-channel/: Cargo.toml
tools/change-channel/src/: main.rs
tools/dk-run/: Cargo.toml
tools/dk-run/src/: main.rs
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: config.rs  main.rs  tasks.rs
(+596 files in other folders)
