[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
name = "firmware"
version = "0.1.0"

[build-dependencies]
consts = { path = "../common/consts" }
quote = "1"
usb2 = { git = "https://github.com/japaric/usb2" }

[dependencies]
consts = { path = "../common/consts" }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
# TODO switch to RTIC before public release
cortex-m-rtfm = "0.5.1"
dk = { path = "../../boards/dk" }
heapless = "0.5.5"
log = "0.4.8"
panic-log = { path = "../../common/panic-log" }
usb = { path = "../common/usb" }
usb2 = { git = "https://github.com/japaric/usb2" }

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

# faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# adds unwind info to external assembly
[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }
