[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "firmware"
version = "0.0.0"

[build-dependencies]
consts = { path = "../common/consts" }
quote = "1"
usb2 = "0.0.1"

[dependencies]
consts = { path = "../common/consts" }
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "0.5.9"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
dk = { path = "../../boards/dk", features = ["advanced"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
usb = { path = "../common/usb" }
usb2 = "0.0.1"

[dependencies.heapless]
version = "0.7.9"
features = ["defmt-impl"]

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

