[package]
authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dk_pac"
version = "0.0.0"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
vcell = "0.1.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt = "0.3.2"
defmt-rtt = "0.4"

[features]
rt = ["cortex-m-rt/device"]
default = [
  "rt"
]
other-feature = []