[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "dk-run"
version = "0.0.0"

[dependencies]
anyhow = "1.0.31"
arrayref = "0.3.6"
ctrlc = "3.1.4"
env_logger = "0.7.1"
gimli = "0.21.0"
log = "0.4.8"
probe-rs = "0.6.2"
probe-rs-rtt = "0.1.0"
rustc-demangle = "0.1.16"
xmas-elf = "0.7.0"