[package]
name = "print-descs"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.5.5"
anyhow = "1.0.31"
consts = { path = "../../common/consts/" }
